fixed double scroll abr

--- a/my-3d-site/src/App.css
+++ b/my-3d-site/src/App.css
@@ -9,11 +9,3 @@ main {
   flex: 1;
   overflow-x: hidden;
 }
-
-.BottomBar {
-  position: sticky;
-  bottom: 0;
-  padding: 10px;
-  width: 100%;
-  z-index: 1000;
-}
